# CMakeList.txt : CMake project for day08, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("day08")

set (CMAKE_CXX_STANDARD 17)

# Add source to this project's executable.
add_executable (day08 "day08.cpp")

# TODO: Add tests and install targets if needed.
